Lock control file also when we have created it in this run. Assertions.

storage/maria/ma_control_file.c:
  Even if the file is just created we have to lock it, otherwise some
  other Maria instance may write to it.
storage/maria/ma_pagecache.c:
  catch too big page numbers when they enter the pagecache; this helps
  debugging BUG#34250.